# SAM_Various_Exp

./: README.md  pyproject.toml  requirements.txt
src/: app.py
src/utils/: Zone_Segmention.py  sam_utils.py  select_zone.py  upload_image.py
