[project]
name = "sam-various-exp"
version = "0.1.0"
description = "Various Experiments with SAM on warious tasks/projects using a simple UI"
authors = [
    {name = "BaptisteLoquette",email = "Baptisteloquette.entr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
