[project]
name = "sam-various-exp"
version = "0.1.0"
description = "Various Experiments with SAM on warious tasks/projects using a simple UI"
authors = [
    {name = "BaptisteLoquette",email = "Baptisteloquette.entr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib (==3.5.1)",
    "numpy (>=1.23)",
    "opencv-python (==4.10.0.84)",
    "pillow (==9.0.1)",
    "pillow (==11.1.0)",
    "segment-anything (==1.0)",
    "streamlit (==1.41.1)",
    "streamlit-extras (==0.5.0)",
    "torch (==2.5.1)",
    "tqdm (==4.67.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
